Update to require java 6 - no need for external deps